--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h2 id="question1">Write about break and continue about loops?</h2>
     <div class="answers">
       <div id="break">
-        <button>Break</button>
-        <div class="break-explain">
+        <button onclick="onclick()" id="button1">Break</button>
+        <div id="break-explain">
           <p>The break statement is used to <span>JUMP OUT</span> of a loop</p>
           <p>Example</p>
           <p>
@@ -29,8 +29,8 @@
         </div>
       </div>
       <div id="continue">
-        <button>Continue</button>
-        <div class="continue-explain">
+        <button id="button2">Continue</button>
+        <div id="continue-explain">
           <p>
             The continue statement breaks one iteration (in the loop), if a
             specified condition occurs, and continues with the next iteration in
@@ -56,6 +56,7 @@
         </div>
       </div>
     </div>
+    <div class="image"><img src="./infinity-loop.gif" alt="" /></div>
 
     <script src="./script.js"></script>
   </body>
